# cookiecutter-dstemplate

./: README.md  cookiecutter.json
src/cookiecutter_dstemplate/: __init__.py
{{ cookiecutter.repo_name }}/: README.md  justfile  makefile  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements-ds.txt  requirements.txt
{{ cookiecutter.repo_name }}/docs/: index.md
{{ cookiecutter.repo_name }}/notebooks/: template.ipynb
{{ cookiecutter.repo_name }}/tests/: test_example.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.project_slug }}/: app.py  data.py  example.py  metrics.py
